Adding SEO and google analytics

--- a/src/pages/cloudupskilling.mdx
+++ b/src/pages/cloudupskilling.mdx
@@ -2,7 +2,7 @@
 layout: "../layout/GeneralLayout.astro"
 title: "Cloud Journey"
 description: "This is the prescribed path to a successful upskilling in Cloud"
-
+type: "CloudAndDevops Upskilling"
 ---
 import SectionLayout from '../layout/SectionLayout.astro';
 
