Changes for new domain

--- a/src/pages/cloudupskilling.mdx
+++ b/src/pages/cloudupskilling.mdx
@@ -20,7 +20,7 @@ import SectionLayout from '../layout/SectionLayout.astro';
 3\. Research the different learning resources available, such as online tutorials, courses, and documentation. Look for resources that provide hands-on experience and practical applications of the technology.
 
 
-4\. Create a learning schedule and stick to it. Set specific goals and milestones for yourself, and hold yourself accountable for meeting them. Joining a community group like Cloud&DevOps Babies can be helpful in this regard, as it provides a supportive environment for learning and growth.
+4\. Create a learning schedule and stick to it. Set specific goals and milestones for yourself, and hold yourself accountable for meeting them. Joining a community group like PlatformDataSecurity Babies can be helpful in this regard, as it provides a supportive environment for learning and growth.
 
 5\. Build a practical project or POC to apply your learning. This can be a great way to demonstrate your skills to potential employers and showcase your ability to work with new technologies. The project you've proposed, building an application to track economic indicators and make stock market predictions, is a great example of a practical, real-world application of these technologies.
 
